# test_performance_nginx_vs_rust_vs_swift

./: Readme.md
golang/: Dockerfile  Readme.md  go.mod
golang/cmd/app/: main.go
nodejs/: main.js
rust/: Cargo.toml  Dockerfile  Readme.md
rust/src/: main.rs
swift/: Dockerfile  Package.swift  Readme.md
swift/Source/: main.swift
